Fix mehrere Prozesse